--- a/_site.yml
+++ b/_site.yml
@@ -66,7 +66,7 @@ navbar:
 
   right:
   - icon: fab fa-github
-    href: https://amacanovic.github.io/limits_gender_equity
+    href: https://github.com/amacanovic/limits_gender_equity
 output:
   html_document:
     theme: flatly
